# PERFORMANCES_SPORTIVES

./: .gitignore  README.md  analyse.drawio  main.py  pyproject.toml
notebooks/: analyse.ipynb  analyse1.ipynb  extraction_data.ipynb
reporting/: send.py
reporting/browser_session/: Last Browser  Local State
reporting/browser_session/Default/: DIPS  Favicons  History  Preferences  Secure Preferences  Top Sites  Web Data
reporting/browser_session/Default/DawnGraphiteCache/: index
reporting/browser_session/Default/DawnWebGPUCache/: index
reporting/browser_session/Default/Extension Rules/: LOG
reporting/browser_session/Default/Extension Scripts/: LOG
reporting/browser_session/Default/Extension State/: LOG  (+1 more)
reporting/browser_session/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  f_00000e  f_00000f  f_000010  f_000011  f_000012  f_000013  f_000014  f_000015  f_000016  f_000017  f_000018  f_000019  f_00001a  index
reporting/browser_session/GraphiteDawnCache/: index
reporting/browser_session/ShaderCache/: index
reporting/browser_session/segmentation_platform/: ukm_db
src/api_strava/: get_rights.py  onyxia_to_main.py  strava_to_onyxia.py
src/data/: analyse.ipynb  analyse_profile.ipynb
src/performances_sportives/: main.py
src/performances_sportives/api_strava/: auth.py.py  extract.py.py  load.py
src/performances_sportives/clean/: clean.py
src/performances_sportives/reporting/: analyse.py  backend.py  bilan.py  charge.py  styles.py
(+321 files in other folders)
