[project]
name = "performance-sportive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "openpyxl==3.1.3",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.0",
    "s3fs>=2026.3.0",
    "seaborn>=0.13.2",
    "xlsxwriter>=3.2.9",
]
